--- a/about.html
+++ b/about.html
@@ -287,13 +287,8 @@
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-geo-alt text-primary me-2"></i>
-                  <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 1 </span> <br>
+                  <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch</span> <br>
                      22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
-                </div>
-                <div class="d-flex mb-2">
-                  <i class="bi bi-geo-alt text-primary me-2"></i>
-                  <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 2</span> <br>
-                    No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.</p>
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-envelope-open text-primary me-2"></i>
