--- a/dataanalytics.html
+++ b/dataanalytics.html
@@ -353,17 +353,11 @@
           > <br>
           <br>
          <div style="font-size: large ; font-weight: 800;"><span
-            ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i> Branch 1 <br> </div> 
+            ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i> Branch<br> </div> 
             
              22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</span
           > <br>
           <br>
-
-          <div style="font-size: large; font-weight: 800;"> <span
-          > <i class="bi bi-geo-alt-fill text-primary me-2 fa-lg"></i>  Branch 2 </div></span
-          >No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.<br>
-          <br>
-          
           <span><i class="fa fa-phone fa-lg"></i>+91 9606 75 2050</span>
           <span
             ><i class="fa fa-envelope text-primary me-2"></i>
@@ -429,13 +423,8 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
-                <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 1 </span> <br>
+                <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch</span> <br>
                    22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
-              </div>
-              <div class="d-flex mb-2">
-                <i class="bi bi-geo-alt text-primary me-2"></i>
-                <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 2</span> <br>
-                  No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.</p>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
