--- a/artificialintelligence.html
+++ b/artificialintelligence.html
@@ -352,7 +352,7 @@
          <div style="font-size: large ; font-weight: 800;"><span
             ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i> Branch<br> </div> 
             
-             22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</span
+             22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055.</span
           > <br>
           <br>
           <span><i class="fa fa-phone fa-lg"></i>+91 9606 75 2050</span>
@@ -419,8 +419,8 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
-                <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 1</span> <br>
-                   22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
+                <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch</span> <br>
+                   22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055.</p>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
