--- a/careers.html
+++ b/careers.html
@@ -366,7 +366,7 @@
                   <div class="d-flex mb-2">
                     <i class="bi bi-geo-alt text-primary me-2"></i>
                     <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch</span> <br>
-                       22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
+                       22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055.</p>
                   </div>
                   <div class="d-flex mb-2">
                     <i class="bi bi-envelope-open text-primary me-2"></i>
