--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,7 @@
                <div style="font-size: large ; font-weight: 800;"><span
                   ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i> Branch<br> </div> 
                   
-                   22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</span
+                   22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055.</span
                 > <br>
                 <br>
                 <span><i class="fa fa-phone fa-lg"></i>+91 9606 75 2050</span>
@@ -298,7 +298,7 @@
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch</span> <br>
-                   22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
+                   22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055.</p>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
